azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "adminUsername": {
        "type": "string",
        "defaultValue": "zeus",
        "metadata": {
          "description": "The name of the SSH user."
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "The name of the SSH password."
        }
      },
      "notificationEmail": {
        "type": "string",
        "defaultValue": "yourname@example.com",
        "metadata": {
          "description": "Email used by Let's encrypt to notify you about certificate expiration (optional)"
        }
      },
      "vmSize": {
        "type": "string",
        "defaultValue": "Standard_D1_v2",
        "metadata": {
          "description": "VM size for the Docker host. (see https://azureprice.net/)"
        }
      },
      "network": {
        "type": "string",
        "allowedValues": [
          "mainnet",
          "testnet",
          "regtest"
        ],
        "defaultValue": "mainnet",
        "metadata": {
          "description": "Choose nainnet for production, or testnet for testing"
        }
      },
      "ubuntuOSVersion": {
        "type": "string",
        "defaultValue": "14.04.4-LTS",
        "metadata": {
          "description": "The Ubuntu version for deploying the Docker containers. This will pick a fully patched image of this given Ubuntu version. Allowed values: 14.04.4-LTS, 15.10, 16.04.0-LTS"
        },
        "allowedValues": [
          "14.04.4-LTS",
          "15.10",
          "16.04.0-LTS"
        ]
      },
      "repository": {
        "type": "string",
        "defaultValue": "https://github.com/NicolasDorier/lightning-charge-docker",
        "metadata": {
          "description": "The GIT repository to pull the docker-compose from"
        }
      },
      "branch": {
        "type": "string",
        "defaultValue": "stable",
        "metadata": {
          "description": "The branch from the GIT repository to use"
        }
      }      
    },
    "variables": {
      "imagePublisher": "Canonical",
      "imageOffer": "UbuntuServer",
      "OSDiskName": "osdiskfordockersimple",
      "nicName": "LightningNetworkInterface",
      "addressPrefix": "10.0.0.0/16",
      "subnetName": "Subnet",
      "subnetPrefix": "10.0.0.0/24",
      "storageAccountType": "Standard_LRS",
      "publicIPAddressName": "LightningPublicIP",
      "publicIPAddressType": "Dynamic",
      "vmStorageAccountContainerName": "vhds",
      "vmAccountStorageName" : "[concat(uniqueString( resourceGroup().id, deployment().name ), 'storage')]",
      "vmName": "LightningVM",
      "virtualNetworkName": "LightningNetwork",
      "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
      "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]"
    },
    "resources": [
      {
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('vmAccountStorageName')]",
        "apiVersion": "2016-01-01",
        "location": "[resourceGroup().location]",
        "kind": "Storage",
        "sku": {
          "name": "[variables('storageAccountType')]"
        }
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('publicIPAddressName')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
          "dnsSettings": {
            "domainNameLabel": "[resourceGroup().name]"
          }
        }
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('addressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[variables('subnetName')]",
              "properties": {
                "addressPrefix": "[variables('subnetPrefix')]"
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('nicName')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                },
                "subnet": {
                  "id": "[variables('subnetRef')]"
                }
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'NetworkSecurityGroup')]"
            }
        }
      },
      {
        "apiVersion": "2017-03-30",
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[variables('vmName')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/', variables('vmAccountStorageName'))]",
          "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('vmSize')]"
          },
          "osProfile": {
            "computerName": "[variables('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "[variables('imagePublisher')]",
              "offer": "[variables('imageOffer')]",
              "sku": "[parameters('ubuntuOSVersion')]",
              "version": "latest"
            },
            "osDisk": {
              "name": "osdisk1",
              "vhd": {
                "uri": "[concat('http://',variables('vmAccountStorageName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('OSDiskName'),'.vhd')]"
              },
              "diskSizeGB": 2048,
              "caching": "ReadWrite",
              "createOption": "FromImage"
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
              }
            ]
          }
        }
      },
      {
        "apiVersion": "2017-03-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "NetworkSecurityGroup",
        "location": "[resourceGroup().location]",
        "tags": {
          "displayName": "NSG - Front End"
        },
        "properties": {
          "securityRules": [
            {
              "name": "Lightning-Charge",
              "properties": {
                "description": "Allow inbound Lightning Charge access",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "SSH",
              "properties": {
                "description": "Allow inbound SSH access",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
              }
            },
            {
              "name": "Lightning",
              "properties": {
                "description": "Allow inbound Lighning Network access",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "9735",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 102,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "name": "[concat(variables('vmName'),'/CSExtension')]",
        "apiVersion": "2017-03-30",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
        ],
        "properties": {
          "publisher": "Microsoft.Azure.Extensions",
          "type": "CustomScript",
          "typeHandlerVersion": "2.0",
          "autoUpgradeMinorVersion": true,
          "settings": 
          { 
              "fileUris" : ["https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/entrypoint.sh", 
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/changedomain.sh",
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/lightning-restart.sh",
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/lightning-update.sh",
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/lightning-show.sh",
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/lightning-cli.sh",
                            "https://raw.githubusercontent.com/nicolasdorier/lightning-charge-azure/master/bitcoin-cli.sh"],
              "commandToExecute" : "[concat('./entrypoint.sh ', reference(concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName')), '2016-03-30').dnsSettings.fqdn, ' ', parameters('network'), ' ', parameters('notificationEmail'),' ', parameters('repository'), ' ', parameters('branch'))]"
          }
        }
      }
    ],
    "outputs": {
        "ssh-username" : {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        },
        "server-azure-dns" : {
            "type": "string",
            "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName')), '2016-03-30').dnsSettings.fqdn]"
        },
        "server-url" : {
            "type": "string",
            "value": "[concat('https://', reference(concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName')), '2016-03-30').dnsSettings.fqdn, '/')]"
        }
    }
  }
